--- a/login.html
+++ b/login.html
@@ -4,9 +4,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>登录/注册</title>
+    <link rel="stylesheet" href="./assets/css/login.css">
+    <link rel="stylesheet" href="./assets/lib/layui/css/layui.css">
 </head>
 <body>
-    
+    <!-- 登录注册区域 -->
+    <div class="loginAndRegBox">
+        <div class="title-box">
+            <h2>后台管理系统</h2>
+        </div>
+        <!-- 登录的div -->
+        <div class="login-box">
+            <form class="layui-form" id="form-login">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required  lay-verify="required|pwd" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 登录按钮 -->
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid  layui-btn-normal" lay-submit lay-filter="formDemo">登录</button>
+                </div>
+                <!-- 去注册 -->
+                <div class="layui-form-item links">
+                    <a href="javascript:;" id="link-reg">去注册</a>
+                </div>
+            </form>
+        </div>
+        <!-- 注册的div -->
+        <div class="reg-box">
+            <form class="layui-form" id="form-reg">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required  lay-verify="required|pwd" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 确认密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="repassword" required  lay-verify="required|pwd|repwd" placeholder="确认密码" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 注册按钮 -->
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid  layui-btn-normal" lay-submit lay-filter="formDemo">注册</button>
+                </div>
+                <!-- 去登录 -->
+                <div class="layui-form-item links">
+                    <a href="javajscript:;" id="link-login">去登陆</a>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!-- 导入layui的js -->
+    <script src="./assets/lib/layui/layui.js"></script>
+    <!-- 导入jq -->
+    <script src="./assets/lib/jquery-1.11.1.min.js"></script>
+    <!-- 导入自己封装的baseApi.js -->
+    <script src="./assets/js/baseApi.js"></script>
+    <!-- 导入自己编写的login.js -->
+    <script src="./assets/js/login.js"></script>
 </body>
 </html>
